GNOME Bugzilla – Bug 761647
yelp-document: Fix return type of document_indexed
Last modified: 2016-02-06 21:47:36 UTC
It's a GSourceFunc, so it'd better return a gboolean. This doesn't seem to be causing any problems in Fedora, but in Endless it's causing 100% CPU usage after executing a search, because the source never gets removed.
Created attachment 320557 [details] [review] yelp-document: Fix return type of document_indexed
Review of attachment 320557 [details] [review]: Seems fine to me.
Probably a duplicate of bug 661509, which I was never able to reproduce.
I think it's actually not a duplicate, but a very very convincing red herring. In that bug Matthias notes "libyelp/yelp-document.c:request_try_free looks fishy", well I found that too debugging this in Yelp 3.17.2, but that bug turned out to be fixed somehow during the WK2 port, and in case the 100% CPU usage doesn't start until navigating to a new page. This bug, in contrast, occurs immediately after starting a search, occurs still in git master, and is characterized by unending invocations of document_indexed rather than request_try_free.
Attachment 320557 [details] pushed as 28a8208 - yelp-document: Fix return type of document_indexed