yelp-document: Fix return type of document_indexed

It's a GSourceFunc, so it'd better return a gboolean. This doesn't seem
to be causing any problems in Fedora, but in Endless it's causing 100%
CPU usage after executing a search, because the source never gets
removed.

https://bugzilla.gnome.org/show_bug.cgi?id=761647